--- a/ja_jp.lang
+++ b/ja_jp.lang
@@ -10,7 +10,7 @@ extrabotany.nei.pedestal=リビングロックの台座
 tooltip.extrabotany.description=実績「%s」を完了するまで使用できません
 
 item.extrabotany:manareader.name=マナリーダー
-item.extrabotany:binder.name=ポジジョンリーダー
+item.extrabotany:binder.name=ポジションリーダー
 item.extrabotany:spiritfuel.name=魂の燃料
 item.extrabotany:spirit.name=魂の欠片
 item.extrabotany:nightmarefuel.name=悪夢の燃料
@@ -413,7 +413,7 @@ botania.page.binder1=今世紀最大の発明
 botania.tagline.binder=地の利
 
 botania.entry.pedestal=リビングロックの台座
-botania.page.pedestal0=Right-click to place items on the Livingrock Pedestal. A hammer can be used to forge items on the Livingrock Pedestal.
+botania.page.pedestal0=右クリックでリビングロッ<BR>クの台座にアイテムを配置<BR>できる。<BR>ハンマーでリビングロックの<BR>台座に配置されたアイテム<BR>を練造できる。
 botania.page.pedestal1=What is evil? Everything that comes from weakness is evil.
 botania.page.pedestal2=Hidden is a kind of outstanding talent.
 botania.page.pedestal3=Hell is other people.
@@ -558,7 +558,7 @@ botania.page.shadowwarrior6=Shadow Warrior Boots
 botania.page.shadowwarrior7=Shadow Katana
 botania.tagline.shadowwarrior=Not A Vampire
 
-botania.entry.elfjar=リビングロックの台座
+botania.entry.elfjar=リビングロックの樽
 botania.page.elfjar0=A Livingrock Barrel can simply contain 16 buckets of liquid. It will also supply water to the Altar next to it if it has any.
 botania.page.elfjar1=Minecraft is too easy.
 botania.tagline.elfjar=Simple
@@ -648,8 +648,8 @@ botania.tagline.lensextra=
 
 botania.entry.judahoath=ユダの誓約
 botania.page.judahoath0=The Judah Oath, at the cost of some mana, will imprison creatures in its range and shoot divine spears at them.
-botania.page.judahoath1=Judah Oath
-botania.page.judahoath2=Judah Oath KIRA
+botania.page.judahoath1=ユダの誓約
+botania.page.judahoath2=ユダの誓約 KIRA
 botania.tagline.judahoath=
 
 botania.entry.bottledflame=瓶詰めの炎
@@ -657,12 +657,12 @@ botania.page.bottledflame0= Equiping a Bottled flame and having torches in your 
 botania.page.bottledflame1=Bottled Flame
 botania.tagline.bottledflame=
 
-botania.entry.bottledstar=Bottled Star
+botania.entry.bottledstar=瓶詰めの炎
 botania.page.bottledstar0= A Bottled Star requires a little &4Mana&0 to set up and then it will summon a lot of stars to attack enemies in a area.
 botania.page.bottledstar1=Bottled Star
 botania.tagline.bottledstar=
 
-botania.entry.bottledpixie=Bottled Pixie
+botania.entry.bottledpixie=瓶詰めピクシィ
 botania.page.bottledpixie0= A Bottled Star uses a little &4Mana&0 to summon a pixie to help you fight. The pixie will only attack hostile mobs and it is quite naughty :3
 botania.page.bottledpixie1=Bottled Pixie
 botania.tagline.bottledpixie=
@@ -783,7 +783,7 @@ advancement.extrabotany:bloodyenchantressUse.desc=ブラッディエンチャン
 advancement.extrabotany:manabufferCraft=ロストワンの号哭
 advancement.extrabotany:manabufferCraft.desc=マナバッファをクラフトする
 advancement.extrabotany:kinggardenCraft=Last Night, Good Night
-advancement.extrabotany:kinggardenCraft.desc=王律庭を作製する
+advancement.extrabotany:kinggardenCraft.desc=王律庭をクラフトする
 advancement.extrabotany:annoyingdogSummon=April Fool
 advancement.extrabotany:annoyingdogSummon.desc=イヌに宝を吸収させる
 advancement.extrabotany:failnaughtCraft=from Y to Y
@@ -797,15 +797,15 @@ advancement.extrabotany:natureorbCraft.desc=ネイチャーオーブをクラフ
 advancement.extrabotany:landmineActive=WORLD'S END UMBRELLA
 advancement.extrabotany:landmineActive.desc=赤色の地雷からダメージを受ける
 advancement.extrabotany:achilleshieldCraft=Mr.Wonder
-advancement.extrabotany:achilleshieldCraft.desc=アキレウスの盾を手に入れる
+advancement.extrabotany:achilleshieldCraft.desc=アキレウスの盾をクラフトする
 advancement.extrabotany:mastermanaringCraft=COLOR
-advancement.extrabotany:mastermanaringCraft.desc=極めしマナバンドを手に入れる
+advancement.extrabotany:mastermanaringCraft.desc=極めしマナバンドをクラフトする
 advancement.extrabotany:mastermanaringFill=Fairytale,
 advancement.extrabotany:mastermanaringFill.desc=ゲームに勝つために極めたマナバンドを満たす
 advancement.extrabotany:musicAll=千本桜
 advancement.extrabotany:musicAll.desc=辛抱強く耳を傾ける
 advancement.extrabotany:armorsetCos=cat's dance
-advancement.extrabotany:armorsetCos.desc=星の歌姫のアーマーセットを装備する
+advancement.extrabotany:armorsetCos.desc=全ての星の歌姫の服を身に着ける
 advancement.extrabotany:armorsetCombat=Drug Of Gold
 advancement.extrabotany:armorsetCombat.desc=Equip Pleiades Combat Maid Armor Set
 advancement.extrabotany:armorsetSW=Crazy ∞ nighT
@@ -813,7 +813,7 @@ advancement.extrabotany:armorsetSW.desc=Equip Shadow Warrior Armor Set at night
 advancement.extrabotany:airshipMaxheight=Slowly sky
 advancement.extrabotany:airshipMaxheight.desc=Drive a Terrasteel Airship at least 200 metres high
 advancement.extrabotany:infinitewineCraft=shake it!
-advancement.extrabotany:infinitewineCraft.desc=Obtain Infinite Wine
+advancement.extrabotany:infinitewineCraft.desc=インフィニティワインをクラフトする
 advancement.extrabotany:excaliberCraft=ReAct
 advancement.extrabotany:excaliberCraft.desc=Obtain Excaliber
 advancement.extrabotany:allStats=erase or Zero
@@ -826,24 +826,24 @@ advancement.extrabotany:spearsubspaceCraft=Nightglow
 advancement.extrabotany:spearsubspaceCraft.desc=Obtain Spear of Subspace
 advancement.extrabotany:armorsetGS=Befall
 advancement.extrabotany:armorsetGS.desc=Equip Goblin Slayer Armor Set
-advancement.extrabotany:herrscherDefeat=Salvation
+advancement.extrabotany:herrscherDefeat=SALVATION
 advancement.extrabotany:herrscherDefeat.desc=Defeat Herrscher of The Void
-advancement.extrabotany:endgameGoal=End Day
+advancement.extrabotany:endgameGoal=最終日
 advancement.extrabotany:endgameGoal.desc=Challenge the final task ? Defeat Herrscher of The Void in 3 minutes!
-advancement.extrabotany:manadriverGet=A Green Hand
+advancement.extrabotany:manadriverGet=未熟者
 advancement.extrabotany:manadriverGet.desc=Complete 6 extrabotany's advancement and you will be awarded Ring of Mana Drive.
-advancement.extrabotany:magicfingerGet=Multiple Happiness
-advancement.extrabotany:magicfingerGet.desc=Complete 12 extrabotany's advancement and you will be awarded Magic Finger
-advancement.extrabotany:jingweifeatherGet=Half Elf, Half Human
-advancement.extrabotany:jingweifeatherGet.desc=Complete 18 extrabotany's advancement and you will be awarded Feather of Jingwei
-advancement.extrabotany:onepunchMan=One Punch
+advancement.extrabotany:magicfingerGet=こちら、幸福安心委員会です。
+advancement.extrabotany:magicfingerGet.desc=extra botanyの実績を12個完了し、魔法の指を入手する
+advancement.extrabotany:jingweifeatherGet=エルフと人間のハーフ
+advancement.extrabotany:jingweifeatherGet.desc=extra botanyの実績を18個完了し、兆銘の羽を入手する
+advancement.extrabotany:onepunchMan=ワンパンチ
 advancement.extrabotany:onepunchMan.desc=Cast an aura fire that deals over 40 damages.
-advancement.extrabotany:coregodCraft=All Hail The Queen
-advancement.extrabotany:coregodCraft.desc=Obtain Core of God.
-advancement.extrabotany:ringSet=Rings, Rings, and More Rings
-advancement.extrabotany:ringSet.desc=Collect most kinds of the rings.
-advancement.extrabotany:bottleSet=Inside Out
-advancement.extrabotany:bottleSet.desc=Collect all kinds of bottles.
+advancement.extrabotany:coregodCraft=女王陛下万歳
+advancement.extrabotany:coregodCraft.desc=神の心をクラフトする
+advancement.extrabotany:ringSet=RING×RING×RING
+advancement.extrabotany:ringSet.desc=全ての種類の指輪を収集する
+advancement.extrabotany:bottleSet=インザイド・アウト
+advancement.extrabotany:bottleSet.desc=全ての種類のビンを収集する
 
 advancement.extrabotany:=
 advancement.extrabotany:.desc=
